--- a/eroeStyleTelView.css
+++ b/eroeStyleTelView.css
@@ -101,7 +101,7 @@ section{
 	position: absolute;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: black;
     font-family: 'DotGothic16', sans-serif;
     margin-bottom:5%;
@@ -230,6 +230,10 @@ textarea:focus, input:focus{
     outline: none;
 }
 
+.casella{
+	height: max-height;
+}
+
 .passwordInput{
 	margin-top:2%;
 	width:90%;
@@ -271,8 +275,8 @@ textarea:focus, input:focus{
 }
 
 .end{
-	height:1%;
-	
+	margin-top: 5%;
+	background: green;
 }
 
 }
